# learning-materials

./: README.md  iris_model.pkl  pyproject.toml
claude/python-project-setup/: SKILL.md
claude/python-project-setup/scripts/: scaffold.py
src/: main.py  sandbox.py  sorting_algs.py
src/ONNX/: mlp.onnx  my_model.onnx  my_model.onnx.data  sandbox.py
src/fast_api_docker/: Dockerfile  Dockerfile.final  Dockerfile.uv
src/fast_api_intro/: Model.py  app.py
src/fluent_python_book/: __init__.py
src/fluent_python_book/conccurency/: Coroutine.py  Thread.py  futures.py
src/fluent_python_book/data_structures/: chapter3_dicts_sets.py  chapter_1.py  chapter_5.py
src/fluent_python_book/inheritance/: mixins.py
src/fluent_python_book/metaprogramming/: sandbox.py
src/fluent_python_book/other/: sandbox.py
src/leetcode/easy/: 100-same-tree.py  101-symmetric-tree.py  104-maximum-depth-binary-tree.py  108. Convert Sorted Array to Binary Search Tree.py  112. path sum.py  121-buy_sell_stocks.py  125-valid-palindrome.py  13-roman-to-int.py  14-Longest Common Prefix.py  190.reverse bit.py  202-happy-number.py  21-merge-two-sorted-linked-lists.py  222-count-binary-tree-nodes.py  232-stacks-queues.py  26-dropDuplicatesInPlace.py  27-remove-elem.py  28-find-substring-in-string.py  303.py  3379. Transformed Array.py  383-ranso-note.py  392-is-substring.py  509-fibbonaci.py  530-minimum-distance.py  70-climbing-stairs.py  704-binary_search.py  706-hashmap.py  88-merge-sorted-arr.py  9-is-palindrom.py
src/leetcode/excalidraw/: 122 Best time to buy and sell a stock.excalidraw  189 rotate array.excalidraw  26 Drop duplicates for sorted array.excalidraw  287.excalidraw  (+3 more)
src/pytorch/: nlp_basics.py  test.py  torch_basics.py
src/research_papers/: grouped_k_folds.ipynb  grouped_k_folds.py  grouped_timeseries_csv.csv
(+120 files in other folders)
