[project]
name = "fluent-python-book"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kostiantyn", email = "battelfield567@gmail.com" }
]
dependencies = [
    "fastapi>=0.115.6",
    "ipykernel>=6.29.5",
    "netron>=8.1.1",
    "numpy>=1.24.4",
    "onnx>=1.17.0",
    "onnxscript>=0.1.0.dev20250114",
    "pandas>=2.0.3",
    "ruff>=0.5.0",
    "scikit-learn>=1.3.2",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "uvicorn>=0.33.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.ruff]
include = ["*.py", "*.pyi", "**/pyproject.toml"]
exclude = ["notebooks", "jobs"]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001",
]
ignore = ["E712"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fluent_python_book"]
